--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@flowing/hero/data-access": ["libs/hero/data-access/src/index.ts"],
+      "@flowing/hero/ui": ["libs/hero/ui/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
