--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@flowing/hero/data-access": ["libs/hero/data-access/src/index.ts"],
-      "@flowing/hero/ui": ["libs/hero/ui/src/index.ts"]
+      "@flowing/hero/ui": ["libs/hero/ui/src/index.ts"],
+      "@flowing/hero/controllers": ["libs/hero/controllers/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
