--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@nrwl/nest": "^11.2.12",
     "@nrwl/node": "11.2.12",
     "@nrwl/tao": "11.2.12",
+    "@nrwl/web": "^11.2.12",
     "@nrwl/workspace": "11.2.12",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
