--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,66 @@
           "error",
           {
             "enforceBuildableLibDependency": true,
-            "allow": [],
+            "allow": [
+              "library-that-is-globally-available",
+              "anything-in-here-is-fine/**"
+            ],
             "depConstraints": [
+              {
+                "sourceTag": "type:e2e",
+                "onlyDependOnLibsWithTags": ["type:app"]
+              },
+              {
+                "sourceTag": "type:app",
+                "onlyDependOnLibsWithTags": ["type:feature", "type:util"]
+              },
+              {
+                "sourceTag": "type:feature",
+                "onlyDependOnLibsWithTags": [
+                  "type:data-access",
+                  "type:ui",
+                  "type:util"
+                ]
+              },
+              {
+                "sourceTag": "type:ui",
+                "onlyDependOnLibsWithTags": ["type:ui", "type:util"]
+              },
+              {
+                "sourceTag": "type:data-access",
+                "onlyDependOnLibsWithTags": ["type:util"]
+              },
+              {
+                "sourceTag": "scope:hero",
+                "onlyDependOnLibsWithTags": ["scope:hero", "scope:shared"]
+              },
+              {
+                "sourceTag": "scope:shared",
+                "onlyDependOnLibsWithTags": ["scope:shared"]
+              },
+              {
+                "sourceTag": "platform:web",
+                "onlyDependOnLibsWithTags": ["platform:web", "platform:any"]
+              },
+              {
+                "sourceTag": "platform:node",
+                "onlyDependOnLibsWithTags": ["platform:node", "platform:any"]
+              },
+              {
+                "sourceTag": "platform:any",
+                "onlyDependOnLibsWithTags": ["platform:any"]
+              },
+              {
+                "sourceTag": "stability:production",
+                "onlyDependOnLibsWithTags": ["stability:production"]
+              },
+              {
+                "sourceTag": "stability:experimental",
+                "onlyDependOnLibsWithTags": [
+                  "stability:experimental",
+                  "stability:production"
+                ]
+              },
               { "sourceTag": "*", "onlyDependOnLibsWithTags": ["*"] }
             ]
           }
