--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
+    "typedoc": "^0.20.30",
     "typescript": "~4.0.3"
   }
 }
