--- a/nx.json
+++ b/nx.json
@@ -1,14 +1,9 @@
 {
   "npmScope": "flowing",
-  "affected": {
-    "defaultBase": "main"
-  },
+  "affected": { "defaultBase": "main" },
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
@@ -17,15 +12,11 @@
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
   "projects": {
-    "hero-app": {
-      "tags": ["type:app", "scope:hero", "platform:web"]
-    },
+    "hero-app": { "tags": ["type:app", "scope:hero", "platform:web"] },
     "hero-app-e2e": {
       "tags": ["type:e2e", "scope:hero", "platform:web"],
       "implicitDependencies": ["hero-app"]
@@ -33,9 +24,7 @@
     "hero-data-access": {
       "tags": ["type:data-access", "scope:hero", "platform:web"]
     },
-    "hero-api": {
-      "tags": ["type:api", "scope:hero", "platform:node"]
-    },
+    "hero-api": { "tags": ["type:api", "scope:hero", "platform:node"] },
     "hero-controllers": {
       "tags": ["type:feature", "scope:hero", "platform:node"]
     },
