--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@nrwl/angular": "^11.2.12",
     "@nrwl/cli": "11.2.12",
     "@nrwl/cypress": "11.2.12",
+    "@nrwl/devkit": "11.2.12",
     "@nrwl/eslint-plugin-nx": "11.2.12",
     "@nrwl/jest": "11.2.12",
     "@nrwl/linter": "11.2.12",
