--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bootstrap": "^4.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
+    "serverless-lambda-nestjs": "0.0.2",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
   },
@@ -66,6 +67,7 @@
     "@nrwl/tao": "11.2.12",
     "@nrwl/web": "^11.2.12",
     "@nrwl/workspace": "11.2.12",
+    "@types/aws-lambda": "^8.10.72",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
     "@typescript-eslint/eslint-plugin": "4.3.0",
@@ -78,6 +80,8 @@
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
     "prettier": "2.2.1",
+    "serverless": "^2.30.3",
+    "serverless-layers": "^2.3.3",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
     "typedoc": "^0.20.30",
